@@ -38,6 +38,7 @@ int erlangsyslog;	/* if set, will log via syslog(3)  */
 int erlanglog1min;	/* if set, will log also "ERLANG1" interval  */
 
 const  char *erlang_backingstore = VARRUN "/aprx.state";
+const  char *erlanglogfile;
 static int erlang_file_fd = -1;
 
 static void *erlang_mmap;
@@ -357,12 +358,13 @@ static void erlang_time_end(void)
 	int i;
 	char msgbuf[500];
 	char logtime[40];
+	char subport[10];
 	struct tm *wallclock = localtime(&now);
 	FILE *fp = NULL;
 
-	if (erlangout > 1 && aprxlogfile) {
-	  /* actually we want it to the aprxlogfile... */
-	  fp = fopen(aprxlogfile,"a");
+	if (erlanglogfile) {
+	  /* actually we want it to the erlanglogfile... */
+	  fp = fopen(erlanglogfile,"a");
 	}
 
 	strftime(logtime, sizeof(logtime), "%Y-%m-%d %H:%M", wallclock);
@@ -372,10 +374,13 @@ static void erlang_time_end(void)
 	  for (i = 0; i < ErlangLinesCount; ++i) {
 	    struct erlangline *E = ErlangLines[i];
 	    E->last_update = now;
+	    *subport = 0;
+	    if (E->subport) sprintf(subport, "_%d", E->subport);
+
 	    if (erlanglog1min) {
 	      sprintf(msgbuf,
-		      "ERLANG%-2d %s %s Raw Bytes/Pkts Rx %6ld %3ld  Tx %6ld %3ld  - %5.3f %5.3f",
-		      1,E->name,logtime,
+		      "ERLANG%-2d %s%s %s Raw Bytes/Pkts Rx %6ld %3ld  Tx %6ld %3ld  - %5.3f %5.3f",
+		      1,E->name, subport, logtime,
 		      E->erl1m.bytes_rx, E->erl1m.packets_rx,
 		      E->erl1m.bytes_tx, E->erl1m.packets_tx,
 		      ((float)E->erl1m.bytes_rx/(float)E->erlang_capa*erlang_time_ival_1min),
@@ -408,9 +413,11 @@ static void erlang_time_end(void)
 	  for (i = 0; i < ErlangLinesCount; ++i) {
 	    struct erlangline *E = ErlangLines[i];
 	    E->last_update = now;
+	    *subport = 0;
+	    if (E->subport) sprintf(subport, "_%d", E->subport);
 	    sprintf(msgbuf,
-		    "ERLANG%-2d %s %s Raw Bytes/Pkts Rx %6ld %3ld  Tx %6ld %3ld  - %5.3f %5.3f",
-		    10,E->name,logtime,
+		    "ERLANG%-2d %s%s %s Raw Bytes/Pkts Rx %6ld %3ld  Tx %6ld %3ld  - %5.3f %5.3f",
+		    10,E->name, subport, logtime,
 		    E->erl10m.bytes_rx, E->erl10m.packets_rx,
 		    E->erl10m.bytes_tx, E->erl10m.packets_tx,
 		    ((float)E->erl10m.bytes_rx/((float)E->erlang_capa*10.0*erlang_time_ival_10min)),
@@ -442,9 +449,11 @@ static void erlang_time_end(void)
 	  for (i = 0; i < ErlangLinesCount; ++i) {
 	    struct erlangline *E = ErlangLines[i];
 	    /* E->last_update = now; -- the 10 minute step does also this */
+	    *subport = 0;
+	    if (E->subport) sprintf(subport, "_%d", E->subport);
 	    sprintf(msgbuf,
-		    "ERLANG%-2d %s %s Raw Bytes/Pkts Rx %6ld %3ld  Tx %6ld %3ld  - %5.3f %5.3f",
-		    60,E->name,logtime,
+		    "ERLANG%-2d %s%s %s Raw Bytes/Pkts Rx %6ld %3ld  Tx %6ld %3ld  - %5.3f %5.3f",
+		    60,E->name, subport, logtime,
 		    E->erl60m.bytes_rx,  E->erl60m.packets_rx,
 		    E->erl60m.bytes_tx,  E->erl60m.packets_tx,
 		    ((float)E->erl60m.bytes_rx/((float)E->erlang_capa*60.0*erlang_time_ival_60min)),
